Added basic Scala API setup using Cask

--- a/.gitignore
+++ b/.gitignore
@@ -107,12 +107,10 @@ dist
 #API
 api/null
 api/target
-
-api/my-feed-api/bin
-api/my-feed-api/null
-api/my-feed-api/project/target
-api/my-feed-api/project/project
-api/my-feed-api/build
+api/bin
+api/project/target
+api/project/project
+api/build
 
 .history
 .scala_dependencies
